# black2

./: .dockerignore  .env.example  .gitignore  1.txt  2.txt  AI 与 AI 可信交易协议白皮书（精简版).docx  AI 与 AI 可信交易协议白皮书（精简版）.md  API_DOC.md  B2P_X402_Architecture_v2.md  BACKEND_DEVELOPMENT_STANDARDS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FRONTEND_ADAPTATION.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  PLAN.md  README.md  RELEASE_NOTES_v1.0.md  SECURITY.md  docker-compose.yml  nginx.conf  start.ps1  start.sh  test_sdk.py  工作记录与明天安排.md  微博庆祝文案.txt
.github/: pull_request_template.md
1/: API_CORE_SERVICE.md  ARCHITECTURE_CONTEXT.md  INTEGRATION_ROUTES_TASK.md  X402_INTEGRATION_TASK.md  migrate_x402_fields.py  requirements.txt  server.py  test_x402_flow.py
2/: .env.example  ANCHOR_SERVICE.md  ARCHITECTURE_CONTEXT.md  INTEGRATION_ARBITRATION_TASK.md  README.md  X402_ANCHOR_TASK.md  requirements.txt
3/: AI_AGENTS.md  ARCHITECTURE_CONTEXT.md  INTEGRATION_GUIDE_FINAL.md  INTEGRATION_PRIVACY_TASK.md  INTEGRATION_TASK_COMPLETE.md  PROGRESS_UPDATE_20260425.md  TASK_SUMMARY.md  X402_INTEGRATION_GUIDE.md  X402_PRIVACY_TASK.md  ZKP_RESEARCH.md  ai_routes_patch.py  example.py  privacy.py  sdk_integration.py  storage_patch.py  test_privacy.py
4/: ARBITRATION_SYSTEM.md  ARCHITECTURE_CONTEXT.md  COMPLETION_REPORT.md  INTEGRATION_GUIDE.md  INTEGRATION_SDK_TEST_TASK.md  README.md  RELEASE_NOTES.md  TASK_4_SUMMARY.md  TASK_SUMMARY.md  (+8 more)
sdk/python/: README.md  pyproject.toml
sdk/python/black2_sdk/: __init__.py  client.py  exceptions.py
sdk/python/examples/: test_sdk.py
(+206 files in other folders)
