[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "black2-sdk"
version = "0.1.0"
description = "Official Python SDK for Black2 AI-to-AI Trading Protocol"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/black2"
"Bug Tracker" = "https://github.com/your-org/black2/issues"
